docker-k8s/kubernetes/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: spe3dlab-public-website-server-nginx-svc
spec:
  type: NodePort
  ports:
    - port: 7083
      targetPort: 80
      protocol: TCP
  selector:
    app: spe3dlab-public-website-server-nginx-pod
