docker-k8s/kubernetes/ingress-redirect.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  annotations:
    cert-manager.io/cluster-issuer: "letsencrypt-prod"
    kubernetes.io/ingress.class: nginx
    nginx.ingress.kubernetes.io/permanent-redirect: "https://spe3dlab.org"
  name: speedlab-redirect-ingress
spec:
  tls:
    - hosts:
      - speedlab.io
      - www.speedlab.io
      secretName: spe3elab.io-tls
  rules:
  - host: speedlab.io
    http:
      paths:
      - pathType: Prefix
        path: "/"
        backend:
          service:
            name: spe3dlab-public-website-server-nginx-svc
            port:
              number: 80
  - host: www.speedlab.io
    http:
      paths:
      - pathType: Prefix
        path: "/"
        backend:
          service:
            name: dummy-service
            port:
              number: 80
